[package]
name = "tranche"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
integration = []

[dependencies]
anyhow = "1.0.75"
chrono = "0.4"
clap = { version = "4.4.7", features = ["derive"] }
polars = { version = "0.34.2", features = ["random", "parquet", "dtype-datetime", "dtype-date"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
time = "0.3.30"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3"
