[package]
name = "remnant"
version = "0.1.2"
edition = "2024"
description = "Create random sub-samples from CSV files or PostgreSQL databases"
license = "MIT"
repository = "https://github.com/ecolumix/remnant"
readme = "README.md"
keywords = ["sampling", "csv", "postgresql", "parquet", "data"]
categories = ["command-line-utilities", "database"]

[features]
integration = []

[dependencies]
anyhow = "1.0.75"
chrono = "0.4"
clap = { version = "4.4.7", features = ["derive"] }
polars = { version = "0.34.2", features = ["random", "parquet", "dtype-datetime", "dtype-date"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
time = "0.3.30"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3"
